feat: implement player target and ban target argument types; add context resolvers for command handling